--- a/project01/index.html
+++ b/project01/index.html
@@ -1,1 +1,32 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ChatAI</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="chat-container">
+
+<div class="ai-chat-box">
+<img src="ai1.png" alt="" id="aiImage" width="50">
+<div class="ai-chat-area">
+   Hello Chat! 😊
+</div>
+
+</div>
+    </div>
+    <div class="prompt-area">
+<input type="text" id="prompt" placeholder="message...">
+<button id="image"><img src="img.svg" alt="">
+<input type="file" accept="images/*" hidden></button>
+<!-- <button id="submit"><img src="submit.svg" alt=""></button> -->
+<button id="submit" class="arrow-btn">↑</button>
+
+
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
